Enable DoT and DoH with ephemeral certificates

--- a/named.conf
+++ b/named.conf
@@ -1,6 +1,14 @@
+http local {
+        endpoints { "/dns-query"; };
+};
+
 options {
         directory "/var/cache/bind";
 
 	listen-on { any; };
         listen-on-v6 { any; };
+        listen-on tls ephemeral { any; };
+        listen-on-v6 tls ephemeral http local { any; };
+        listen-on tls ephemeral { any; };
+        listen-on-v6 tls ephemeral http local { any; };
 };
