--- a/named.conf
+++ b/named.conf
@@ -8,7 +8,7 @@ options {
 	listen-on { any; };
         listen-on-v6 { any; };
         listen-on tls ephemeral { any; };
-        listen-on-v6 tls ephemeral http local { any; };
-        listen-on tls ephemeral { any; };
+        listen-on-v6 tls ephemeral { any; };
+        listen-on tls ephemeral http local { any; };
         listen-on-v6 tls ephemeral http local { any; };
 };
